# DAEMON

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .gitmodules  .lintstagedrc.json  .snyk  AGENTS.md  Buat Susunan folder &amp; file dari input gambar t.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  check-pnpm-version.js  clickhouse-api-key.example.txt  go.work  go.work.sum  important-only.qls  in-progress.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.cursor/: mcp.json
ontology/shim/: Cargo.toml
ontology/shim/src/: lib.rs
pipelines/market-intel/: README.md  pyproject.toml
pipelines/market-intel/references/data-context/: entities.md  metrics.md  sample_queries.sql
pipelines/market-intel/references/data-context/tables/: market_intel_chunks.md
pipelines/market-intel/references/shodan/: openapi-trends.json
pipelines/market-intel/scripts/: company-brief.sh  competitor-scan.sh  market-map.sh  social-scan.sh
pipelines/market-intel/src/market_intel/: __init__.py  __main__.py  cli.py  config.py  openai_client.py  prompts.py  run_context.py  security.py
pipelines/market-intel/src/market_intel/agents/: company_intelligence.py
pipelines/market-intel/src/market_intel/evals/: citation_eval.py
pipelines/market-intel/src/market_intel/extended/: ai_visibility.py  company_intelligence.py  shodan_trends.py  social_research.py
pipelines/market-intel/src/market_intel/pipeline/: l1_graph.py  schemas_output.py  workflows.py
pipelines/market-intel/src/market_intel/postprocess/: humanize.py  normalize.py
pipelines/market-intel/src/market_intel/rag/: agent.py  chunking.py  hybrid.py  internal_rag.py  vectorize.py
pipelines/market-intel/tests/: test_humanize_security.py
(+1844 files in other folders)
