[project]
name = "market-intel"
version = "0.1.0"
description = "DAEMON market intelligence pipeline (Tavily L1/L2/L3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tavily-python>=0.7.0",
  "httpx>=0.27",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "pydantic>=2.0",
  "jsonschema>=4.0",
  "openai>=1.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
market-intel = "market_intel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_intel"]
